# cmake-practice

A_hello_cmake/: CMakeLists.txt  main.cc
B_hello_headers/: CMakeLists.txt
B_hello_headers/src/: Hello.cc  main.cc
C_static_library/: CMakeLists.txt
D_shared_library/: CMakeLists.txt
